# can_bit_timings

./: Cargo.toml  README.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: lib.rs
proc-macro/: Cargo.toml
proc-macro/src/: lib.rs
src/: lib.rs
tests/: 01-simple-bit-timings.rs  02-frequency-with-mhz.rs  03-struct-output.rs  04-optargs.rs  progress.rs
