[package]
name = "can-bit-timings-core"
version = "1.0.0"
authors = ["Pavel Pletenev <cpp.create@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "This package is a common dependency for can-bit-timings and can-bit-timings-proc-macro"
documentation = "https://docs.rs/can-bit-timings-core"
repository = "https://github.com/ASMfreaK/can_bit_timings"
categories = [ "embedded", "no-std", "config" ]
keywords = ["can-bus", "convenience"]

[dependencies]
