[package]
name = "can-bit-timings-proc-macro"
version = "0.1.0"
authors = ["delphi <cpp.create@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true


[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"

[dependencies.can-bit-timings-core]
path = "../core"