[package]
name = "can-bit-timings-proc-macro"
version = "1.0.1"
authors = ["Pavel Pletenev <cpp.create@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "This package is a common dependency for can-bit-timings and can-bit-timings-proc-macro"
documentation = "https://docs.rs/can-bit-timings-proc-macro"
repository = "https://github.com/ASMfreaK/can_bit_timings"
categories = [ "embedded", "no-std", "config" ]
keywords = ["can-bus", "convenience"]

[lib]
proc-macro = true


[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"

[dependencies.can-bit-timings-core]
path = "../core"
version = "1.0.0"
